--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>css exercise four</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -9,17 +9,17 @@
   <body>
     <section class="container">
       <h1>Modern luxury <span class="emphasis">travel</span></h1>
-      <div class="preview baku">
-        <h1>Baku</h1>
+      <div class="preview-baku">
+        <h2>Baku</h2>
       </div>
-      <div class="preview london">
-        <h1>London</h1>
+      <div class="preview-london">
+        <h2>London</h2>
       </div>
-      <div class="preview madrid">
-        <h1>Madrid</h1>
+      <div class="preview-madrid">
+        <h2>Madrid</h2>
       </div>
-      <div class="preview rome">
-        <h1>Rome</h1>
+      <div class="preview-rome">
+        <h2>Rome</h2>
       </div>
     </section>
   </body>
